--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ rel="stylesheet"
     <h1>Weather Dashboard</h1>
   </header>
   <main class="row">
-    <section id="search" class="col-12 col-md-3">
+    <section id="search" class="col-12 col-lg-3">
       <h2>Search for a City</h2>
       <form class="location">
         <div class="mb-3">
@@ -39,26 +39,26 @@ rel="stylesheet"
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      <div >
+      <div class="col">
+        <h2>My Cities</h2>
         <ul id="saved-cities">
-          <div class="row">
-            <h3 class="col-10">city name</h3>
-            <button class="col-2">delete button</button>
-
-          </div>
+          <!-- <li class="row">
+            <button class="city-name col-10">city name</button>
+            <button class="col-2">delete</button>
+          </li> -->
         </ul>
       </div>
     </section>
-    <section class="conditions col-12 col-md-9" >
-      <div id="current-conditions" class="col">
+    <section class="conditions col-12 col-lg-9" >
+      <div  class="col">
         <h2>Current Weather</h2> 
         <h3 id="h3Location"></h3>  <!-- will contain selected city name and date -->
-        <ul></ul>   
+        <ul id="current-conditions"></ul>   
       </div>
-      <div id="future-conditions" class="col">
+      <div class="col">
         <h2>5-Day Forecast</h2>
-        <div class="row"></div>
-      </div>
+        <ul id="forecast-conditions" class="row row-cols-5"></ul>
+       </div>
     </section>
   </main>
 
